data retrieval and context-sensitive behavior

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,23 +2,40 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.davidadamojr.employeebase">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <uses-permission android:name="android.permission.INTERNET" />
-
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme"
+        android:name="com.davidadamojr.employeebase.EmployeeBase">
+        <activity android:name=".NewEmployee"
+            android:parentActivityName="com.davidadamojr.employeebase.AllEmployees">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.davidadamojr.employeebase.AllEmployees" />
+        </activity>
+        <activity android:name=".AllEmployees">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AllEmployees" />
-        <activity android:name=".ViewEmployee"></activity>
+        <activity android:name=".ViewEmployee"
+            android:parentActivityName="com.davidadamojr.employeebase.AllEmployees">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.davidadamojr.employeebase.AllEmployees" />
+        </activity>
+        <activity android:name=".EditEmployee"
+            android:parentActivityName="com.davidadamojr.employeebase.AllEmployees">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.davidadamojr.employeebase.AllEmployees" />
+        </activity>
     </application>
 
 </manifest>
