--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,15 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".EmployeeBase"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name="com.davidadamojr.employeebase.EmployeeBase">
-        <activity android:name=".NewEmployee"
-            android:parentActivityName="com.davidadamojr.employeebase.AllEmployees">
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".NewEmployee"
+            android:parentActivityName=".AllEmployees">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.davidadamojr.employeebase.AllEmployees" />
@@ -21,21 +22,28 @@
         <activity android:name=".AllEmployees">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ViewEmployee"
-            android:parentActivityName="com.davidadamojr.employeebase.AllEmployees">
+        <activity
+            android:name=".ViewEmployee"
+            android:parentActivityName=".AllEmployees">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.davidadamojr.employeebase.AllEmployees" />
         </activity>
-        <activity android:name=".EditEmployee"
-            android:parentActivityName="com.davidadamojr.employeebase.AllEmployees">
+        <activity
+            android:name=".EditEmployee"
+            android:parentActivityName=".AllEmployees">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.davidadamojr.employeebase.AllEmployees" />
         </activity>
+
+        <service
+            android:name=".AllEmployeeService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
