--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,14 +4,14 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".EmployeeBase"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:supportsRtl="true">
         <activity
             android:name=".NewEmployee"
             android:parentActivityName=".AllEmployees">
@@ -44,6 +44,14 @@
         <service
             android:name=".PollService"
             android:exported="false"></service>
+
+        <receiver
+            android:name="com.davidadamojr.tester.CoverageReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="com.davidadamojr.tester.finishtesting" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
